# StoryForge

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLEANUP.md  DEV.md  Makefile  README.md  StoryTime.py  complete_story_EXTENSION_EXTENSION_EXTENSIO_20251105_234931_20251105_234956.txt  complete_story_EXTENSION_EXTENSION_EXTENSIO_20251105_234931_20251105_235820.txt  complete_story_EXTENSION_EXTENSION_EXTENSIO_20251105_234931_20251106_002359.txt  list_gemini_models.py  pyproject.toml  test_fastmcp_direct.py  test_mcp_inspector.py  test_mcp_server.py  test_queue_manager.py  test_story_generation_tool.py
.github/workflows/: ci.yml
docs/: CONFIGURATION.md  FASTMCP_MIGRATION.md  MCP_ARCHITECTURE.md  MCP_IMPLEMENTATION_STATUS.md  MCP_REFACTOR_PLAN.md  STORY_CHAIN_TRACKING.md  WEEK3_PROGRESS.md
storyforge/: StoryForge.py  __init__.py  anthropic_backend.py  checkpoint.py  config.py  console.py  context.py  gemini_backend.py  llm_backend.py  model_cache.py  model_discovery.py  model_ranking.py  openai_backend.py  phase_executor.py  prompt.py  story_picker.py  test_story.txt  world_template.py
storyforge/client/: __init__.py  formatters.py  mcp_client.py
storyforge/schema/: __init__.py  cli_integration.py  config_schema.py  core.py  validation.py
storyforge/server/: __init__.py  __main__.py  fastmcp_server.py  mcp_server.py  path_resolver.py  queue_manager.py
storyforge/server/tools/: __init__.py  config.py  content.py  extension.py  image.py  refinement.py  session.py  story.py
storyforge/shared/: __init__.py  errors.py  types.py
storytime/: StoryCLI.py  StoryTime.py  context.py  gemini_backend.py  llm_backend.py  prompt.py  story_prompt.py
storytime_output_20250730_201625/: story.txt
tests/: conftest.py  test_StoryForge.py  test_StoryTime.py  test_anthropic_backend.py  test_chain_tracking.py  test_character_registry.py  test_checkpoint.py  test_cli_integration.py  test_config.py  test_config_tools.py  test_content_tools.py  test_context.py  test_context_summarization.py  test_extend_command.py  test_extension_tools.py  test_gemini_backend.py  test_image_tools.py  test_init_config_cli.py  test_llm_backend.py  test_mcp_server.py  test_model_cache.py  test_model_discovery.py  test_model_ranking.py  test_openai_backend.py  test_phase_executor.py  test_prompt.py  test_queue_manager.py  test_refinement_tools.py  test_schema_validation.py  test_story_generation_tool.py  test_story_picker.py  test_story_prompt.py  test_token_compression.py  test_video_prompt.py  test_world.py
