[project]
name = "StoryTime"
version = "0.0.1"
description = "A TUI app that generates short stories and AI images from prompts using a language model."
authors = [
    { name = "wom" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "google-genai>=1.23.0",
    "pillow>=11.2.1",
    "textual[syntax]>=0.54.1",
    "textual-dev>=0.00.1",
    "typer>=0.9.0",
    "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.12.1",
    "pre-commit>=3.6.0",
    "pip>=25.1.1"
]

[project.scripts]
storytime = "storytime.StoryTime:main"
storytime-cli = "storytime.StoryCLI:app"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["storytime*"]
exclude = ["data*", "tests*"]

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
